--- a/app/src/main/res/drawable/card_view.xml
+++ b/app/src/main/res/drawable/card_view.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <corners android:radius="20dp"></corners>
+    <corners android:radius="10dp"></corners>
+    <solid android:color="#FFF2FAB7"></solid>
+    <stroke android:color="#FFFFF200" android:width="4dp"/>
+
 
 
 
