--- a/app/src/main/res/layout/activity_poke.xml
+++ b/app/src/main/res/layout/activity_poke.xml
@@ -5,6 +5,7 @@
     android:id="@+id/pokeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgr"
     app:layout_goneMarginLeft="30dp"
     app:layout_goneMarginRight="30dp"
     app:layout_goneMarginStart="30dp"
@@ -15,10 +16,12 @@
         android:id="@+id/pokeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:text="TextView"
         android:textAllCaps="true"
         android:textColor="@android:color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.446"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +49,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="8"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -59,9 +62,12 @@
                         android:id="@+id/textView9"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
+                        android:paddingLeft="10dp"
                         android:text="Height ->"
-                        android:textColor="@android:color/black"
+                        android:textColor="#2339C7"
                         android:textSize="16sp" />
                 </LinearLayout>
 
@@ -75,9 +81,13 @@
                         android:id="@+id/textView7"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="1"
+                        android:fontFamily="casual"
+                        android:gravity="fill_vertical"
+                        android:paddingLeft="10dp"
                         android:text="Weight ->"
-                        android:textColor="@android:color/black"
+                        android:textColor="#2339C7"
                         android:textSize="16sp" />
                 </LinearLayout>
 
@@ -92,8 +102,11 @@
                         android:layout_width="107dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Base_Experence ->"
-                        android:textColor="@android:color/black"
+                        android:fontFamily="casual"
+                        android:gravity="fill_vertical"
+                        android:paddingLeft="10dp"
+                        android:text="Experience ->"
+                        android:textColor="#2339C7"
                         android:textSize="16sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -101,7 +114,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -115,7 +128,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:textColor="@android:color/black"
+                        android:fontFamily="casual"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="10dp"
+                        android:textColor="#2339C7"
                         android:textSize="16sp" />
                 </LinearLayout>
 
@@ -130,7 +146,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:textColor="@android:color/black"
+                        android:fontFamily="casual"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="10dp"
+                        android:textColor="#2339C7"
                         android:textSize="16sp" />
                 </LinearLayout>
 
@@ -142,10 +161,14 @@
 
                     <TextView
                         android:id="@+id/base_experience"
-                        android:layout_width="107dp"
+                        android:layout_width="85dp"
                         android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:textColor="@android:color/black"
+                        android:fontFamily="casual"
+                        android:gravity="fill_vertical"
+                        android:paddingLeft="10dp"
+                        android:textColor="#2339C7"
                         android:textSize="16sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -176,9 +199,12 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="monospace"
             android:text="Stats"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -196,21 +222,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="HP" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="HP"
+                    android:textColor="#2339C7" />
 
                 <TextView
                     android:id="@+id/attackText"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Attack" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Attack"
+                    android:textColor="#2339C7" />
 
                 <TextView
                     android:id="@+id/defenseText"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Defense" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Defense"
+                    android:textColor="#2339C7" />
 
             </LinearLayout>
 
@@ -225,21 +263,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="10" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="10"
+                    android:textColor="#2339C7" />
 
                 <TextView
                     android:id="@+id/attack"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="10" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="10"
+                    android:textColor="#2339C7" />
 
                 <TextView
                     android:id="@+id/defense"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="10" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="10"
+                    android:textColor="#2339C7" />
 
             </LinearLayout>
 
@@ -254,21 +304,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Speed" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Speed"
+                    android:textColor="#2339C7" />
 
                 <TextView
                     android:id="@+id/spAttackText"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Sp. Attack" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Sp. Attack"
+                    android:textColor="#2339C7" />
 
                 <TextView
                     android:id="@+id/spDefenseText"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Sp. Defense" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="Sp. Defense"
+                    android:textColor="#2339C7" />
             </LinearLayout>
 
             <LinearLayout
@@ -282,21 +344,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="10" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="10"
+                    android:textColor="#2339C7" />
 
                 <TextView
                     android:id="@+id/spAttack"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="10" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="10"
+                    android:textColor="#2339C7" />
 
                 <TextView
                     android:id="@+id/spDefense"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="10" />
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="fill_vertical"
+                    android:paddingLeft="10dp"
+                    android:text="10"
+                    android:textColor="#2339C7" />
             </LinearLayout>
         </LinearLayout>
 
@@ -304,9 +378,12 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="monospace"
             android:text="Evolution_Chain"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/evolutionList"
@@ -317,9 +394,12 @@
             android:id="@+id/textView78"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="monospace"
             android:text="Types"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/pokeTypeList"
@@ -343,17 +423,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.818" />
 
-    <ProgressBar
-        style="?android:attr/progressBarStyle"
-        android:id="@+id/progressBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/pokeStar"
         android:layout_width="51dp"
@@ -365,5 +434,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_star_border_black_24dp"
         tools:ignore="VectorDrawableCompat" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/av_loader"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/background_light"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
