--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
 
     android:layout_height="70dp"
-    app:cardBackgroundColor="@android:color/background_light">
+    app:cardBackgroundColor="@android:color/black">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,12 +20,14 @@
             android:id="@+id/pokemonName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:text="TextView"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.509" />
+            app:layout_constraintStart_toEndOf="@+id/viewImage"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/star"
@@ -38,6 +40,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_star_border_black_24dp"
             tools:ignore="VectorDrawableCompat" />
+
+        <ImageView
+            android:id="@+id/viewImage"
+            android:layout_width="67dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="16dp"
+            android:foregroundGravity="center_vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.6"
+            app:srcCompat="@mipmap/ic_launcher" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
